--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light"> 
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
     <link rel="icon" type="image/png" href="./images/favicon.ico">
-    <link rel="stylesheet" href="./fonts/fonts.css">
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -44,7 +44,9 @@
       </nav>
 
       <div class="header__rec__container" aria-hidden="true">
-        <p class="header__rec">REC<div class="REC_circle"></div></p>
+        <p class="header__rec">REC
+          <div class="REC_circle"></div>
+        </p>
         <div class="circle__container__header">
           <div class="circle__header"></div>
         </div>
