--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light"> 
+    <meta name="color-scheme" content="light dark"> 
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
@@ -46,7 +46,7 @@
       <div class="header__rec__container" aria-hidden="true">
         <p class="header__rec">REC
           <div class="REC_circle"></div>
-        </p>
+
         <div class="circle__container__header">
           <div class="circle__header"></div>
         </div>
