--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           внимания?
         </h2>
         <div class="decrease__in__concentration__container">
-          <div class="explanations__container ">
+          <div class="explanations__container explanations__container__horisontal">
             <h3 class="general__headers explanations__title">
               Многозадачность
             </h3>
@@ -111,18 +111,18 @@
             </p>
           </div>
 
-          <div class="explanations__container ">
+          <div class="explanations__container explanations__container__horisontal">
             <h3 class="general__headers explanations__title">
               Еда
             </h3>  
-            <p class="explanations__description explanations__description__mobile__class">
+            <p class="explanations__description explanations__description__mobile__class ">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему 
               лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»:
               как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
           </div>
 
-          <div class="explanations__container ">
+          <div class="explanations__container explanations__container__horisontal">
             <h3 class="general__headers explanations__title">
               Гаджеты
             </h3>  
@@ -135,7 +135,7 @@
           </div>
         </div>
       </section>
-      <section class="concentration__section concentration__section-top">
+      <section class="concentration__section  concentration__section__how__to__concentrate__better">
         
         <div class="how__to__concentrate__better__container">
           <h2 class="general__headers chapter__title chapter__title-bolt">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
@@ -209,8 +209,8 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="footer__container">
+    <footer class="footer ">
+      <div class="footer__container decorated-zone">
         <h2 class="footer__title">focus</h2>
       </div>
     </footer>
